--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
-body{
-    background-color: #c88d98;
+cabecalho {
+    background-color: #b66272;
+    display: flex;justify-content: space-around;
 }
+
+.cabecalho-imagem {width: 30%;}
